--- a/assets/theme/scss/pages/front-page.scss
+++ b/assets/theme/scss/pages/front-page.scss
@@ -18,13 +18,15 @@
 
       & > h1 {
         color: #555;
-        font-size: 32px;
+        font-family: "ProximaNovaThin";
+        font-size: 42px;
         margin-bottom: 16px;
       }
 
       & > h2 {
         color: #555;
-        font-size: 16px;
+        font-family: "ProximaNovaThin";
+        font-size: 24px;
       }
 
     }
