--- a/assets/theme/scss/pages/front-page.scss
+++ b/assets/theme/scss/pages/front-page.scss
@@ -47,12 +47,14 @@
       text-align: center;
 
       & > h3 {
+        color: #555;
         font-family: "ProximaNovaThin";
         font-size: 18px;
         margin-bottom: 10px;
       }
 
       & > p {
+        color: #555;
         font-family: helvetica;
         font-size: 14px;
         line-height: 1.5;
@@ -66,15 +68,17 @@
       text-align: center;
 
       & > h3 {
+        color: #555;
         font-family: "ProximaNovaThin";
         font-size: 18px;
-        line-height: 1.5;
         margin-bottom: 10px;
       }
 
       & > p {
+        color: #555;
         font-family: helvetica;
         font-size: 14px;
+        line-height: 1.5;
         margin-bottom: 10px
       }
 
@@ -103,10 +107,12 @@
     @media (max-width: 799px) {
 
       & > .left {
+        padding: 20px 0;
         width: 100%;
       }
 
       & > .right {
+        padding: 20px 0;
         width: 100%;
       }
 
